--- a/table1.html
+++ b/table1.html
@@ -19,7 +19,7 @@ cl<!DOCTYPE html>
         }
         .couleur2{
             background-color: #96c21f;
-        }
+        }git push -u origin main
         .couleur3{
             background-color: #e65686;
         }
